Refine products layout and compact footer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "query-string": ["./lib/vendor/query-string"]
     }
   },
   "include": [
